[package]
name = "grpc-load-test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
yellowstone-grpc-proto = "1.14.2"
yellowstone-grpc-client = "1.14.2"
time = "0.3.41"
chrono = "0.4.40"
